--- a/src/app/Public/Layers/musicplayer/musicplayer.component.css
+++ b/src/app/Public/Layers/musicplayer/musicplayer.component.css
@@ -75,14 +75,14 @@
     width: 20px;
     height: 20px;
     border: 3px solid #333;
-    border-top: 3px solid #fff;
+    border-top: 3px solid var(--colorWhite);
     border-radius: 50%;
     animation: load 0.9s  infinite linear;
 
 }
 
 .playlistbtn {
-    color: #fff;
+    color: var(--colorWhite);
 }
 
 @keyframes load {
