--- a/src/app/Public/Layers/sidenav/sidenav.component.html
+++ b/src/app/Public/Layers/sidenav/sidenav.component.html
@@ -8,15 +8,11 @@
          </ul>
          <p class="color-gr fs-12 mt-4 splitter"><span>Users</span></p>
          <ul class="navbar-nav">
-             <li class="nav-item color-sv"[routerLinkActive]="['active','/playlist']" ><ion-icon name="grid-outline"></ion-icon><span><a (click)="playDirectory()"
-             routerLinkActive="router-link-active" >Playlist</a></span></li>
-<<<<<<< HEAD
-             <li class="nav-item color-sv"><ion-icon name="people-outline"></ion-icon><span><a routerLink="/profile">Profile</a></span></li>
-=======
-             <li class="nav-item color-sv"><ion-icon name="people-outline"></ion-icon><span><a [routerLink]="['/profile']" routerLinkActive="/profile">Profile</a> </span></li>
->>>>>>> a4ddd02924eeb154ec51c812b56e49e51df9279a
+             <!-- <li class="nav-item color-sv"[routerLinkActive]="['active','/playlist']" *ngIf="loginUser && playlistActive"><ion-icon name="grid-outline"></ion-icon><span><a (click)="playDirectory()"
+             routerLinkActive="router-link-active" >Playlist</a></span></li> -->
+             <li class="nav-item color-sv" *ngIf="loginUser" ><ion-icon name="people-outline"></ion-icon><span><a [routerLink]="['/profile']" routerLinkActive="/profile">Profile</a> </span></li>
              <li class="nav-item color-sv" *ngIf="!token"><ion-icon name="log-in-outline"></ion-icon><span><a href="/login">Login</a></span></li>
-             <li class="nav-item color-sv" [routerLinkActive]="['active','/Settingprofile']"><ion-icon name="aperture-outline"></ion-icon><span><a routerLink="/Settingprofile">Settings Profile</a></span></li>
+             <li class="nav-item color-sv" *ngIf="loginUser" [routerLinkActive]="['active','/Settingprofile']"><ion-icon name="aperture-outline"></ion-icon><span><a routerLink="/Settingprofile">Settings</a></span></li>
 
              <li class="nav-item color-sv" *ngIf="token" (click)="logout()" ><ion-icon name="log-in-outline"></ion-icon><span>Logout</span></li>
              <li class="nav-item d-flex justify-content-start align-item-center">
