--- a/src/app/Public/pages/playlist/playlist.component.css
+++ b/src/app/Public/pages/playlist/playlist.component.css
@@ -11,7 +11,7 @@
 }
 
 .playlist .btn-area .btn {
-    color: #fff;
+    color: var(--colorWhite);
     font-size: 12px;
     border-radius: 20px;
     width: 100px;
@@ -23,7 +23,7 @@
 }
 
 .playlist .music-info h2{
-    color: #fff;
+    color: var(--colorWhite);
     font-weight: bold;
 }
 .playlist .music-info p {
@@ -35,15 +35,15 @@
     font-size: 12px;
     width: 137px;
     border-radius: 20px;
-    background: #fff;
+    background: var(--colorWhite);
     border: navajowhite;
-    color: #000;
+    color: var(--black);
     font-weight: bold;
     transition: all .3s linear;
 }
 .playlist .music-info button:hover {
     background: black;
-    color: #fff;
+    color: var(--colorWhite);
 }
 
 .playlist .song-list {
@@ -58,12 +58,12 @@
 }
 
 .playlist .song-list:not(:last-child) {
-    background-color: #1a1a1a;
+    background-color: var(--dark-gray);
 }
 .playlist .song-list button{
     background-color: transparent;
     border: none;
-    color: #fff;
+    color: var(--colorWhite);
     font-size: 12px;
 }
 
@@ -76,13 +76,13 @@
 
 .playlist .song-list h4 {
     font-size: 12px;
-    color: #fff;
+    color: var(--colorWhite);
     font-weight: revert;
     margin: 0;
 }
 
 .playlist .song-list p {
-    color:  #ccc;
+    color:  var(--grey);
     font-size: 12px;
     margin: 0;
 }
