--- a/src/app/Public/pages/playlist/playlist.component.html
+++ b/src/app/Public/pages/playlist/playlist.component.html
@@ -1,25 +1,10 @@
-<<<<<<< HEAD
-<app-navbar></app-navbar>
-<ul class="navbar-nav flex-row Taber color-wh fs-13 mb-5">
-  <li  class="pr-3"><a [routerLinkActive]="['routerLinkActives']" routerLink="/home">Discover</a></li>
-  <li  class="pr-3"><a [routerLinkActive]="['routerLinkActives']" routerLink="/browse">Browse</a></li>
-  <li  class="pr-3"><a [routerLinkActive]="['routerLinkActives']" routerLink="/newrel">NewRelease</a></li>
-  <li class="pr-3"><a [routerLinkActive]="['routerLinkActives']"  routerLink="/charts">charts</a></li>
-  <li class="pr-3"><a [routerLinkActive]="['routerLinkActives']" routerLink="/playlist">playlist</a></li>
-</ul>
-<div class="tb-container d-flex">
-  <app-sidenav></app-sidenav>
-  <div class="playlist mt-5">
-    <div class="playlist-header">
-=======
 <div class="tb-container d-flex">
   <div class="playlist mt-0 position-relative" style="background-image:  linear-gradient(356deg
-  ,#101010,#101010,#10101082,transparent),url('{{ playlistDisplayImg }}');" >
+  ,var(--black),transparent),url('{{ playlistDisplayImg }}');" >
     <div class="playlist-header" >
       <div class="btn-area d-flex  ml-auto">
          <button class="btn btn-danger" *ngIf="(playlistMusicCount == 0) false">Delete</button>
       </div>
->>>>>>> 628fb5874a0a5e7fa3f031983027691d19e1f271
       <div class="container">
         <Div class="row mt-5">
           <div class="playlist-poster p-3">
